convert the fcm message receiver to an intent service that is implicitly called instead of broadcasted. Seems as though the broadcasting wasn't always making it through

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -253,12 +253,7 @@
         </receiver>
 
 
-        <receiver android:name=".receiver.FirebaseMessageReceiver"
-            android:exported="false">
-            <intent-filter>
-                <action android:name="xyz.klinker.messenger.api.implementation.MESSAGE_RECEIVED" />
-            </intent-filter>
-        </receiver>
+        <service android:name=".service.FirebaseHandlerService" />
 
         <receiver android:name=".receiver.NotificationDismissedReceiver"
             android:exported="false" />
