make sure the keyboard is always shown when opening the notification reply

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -185,7 +185,7 @@
             tools:replace="android:theme" />
         <activity android:name=".activity.NotificationReplyActivity"
             android:theme="@style/api_Theme.AppCompat.Translucent"
-            android:windowSoftInputMode="adjustPan"
+            android:windowSoftInputMode="adjustPan|stateAlwaysVisible"
             android:excludeFromRecents="true"
             android:launchMode="singleInstance"/>
 
