--- a/api_implementation/src/main/AndroidManifest.xml
+++ b/api_implementation/src/main/AndroidManifest.xml
@@ -31,14 +31,14 @@
             android:launchMode="singleTask"/>
 
         <service
-            android:name=".MessengerFirebaseMessagingService"
+            android:name=".firebase.MessengerFirebaseMessagingService"
             android:exported="false">
             <intent-filter>
                 <action android:name="com.google.firebase.MESSAGING_EVENT" />
             </intent-filter>
         </service>
         <service
-            android:name=".MessengerFirebaseInstanceIDService"
+            android:name=".firebase.MessengerFirebaseInstanceIDService"
             android:exported="false">
             <intent-filter>
                 <action android:name="com.google.firebase.INSTANCE_ID_EVENT" />
