--- a/app/build.gradle
+++ b/app/build.gradle
@@ -135,6 +135,7 @@ dependencies {
     compile 'com.github.bumptech.glide:glide:3.7.0'
     compile 'com.larswerkman:lobsterpicker:1.0.1'
     compile 'com.github.chrisbanes:PhotoView:1.3.0'
+    compile 'me.leolin:ShortcutBadger:1.1.10@aar'
 
     compile project(":api_implementation")
     compile project(":encryption")
