do a better job of keeping the fcm token up to date, I hope

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -277,6 +277,7 @@
             </intent-filter>
         </service>
 
+        <service android:name=".service.ForceTokenRefreshService" />
         <service android:name=".service.FirebaseHandlerService" />
         <service android:name=".service.NotificationService" />
         <service android:name=".service.NotificationDismissedService" />
