--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -54,8 +54,7 @@
 
     <application
         android:name=".MessengerApplication"
-        android:allowBackup="true"
-        android:fullBackupContent="@xml/backup_content"
+        android:allowBackup="false"
         android:icon="@mipmap/ic_launcher"
         android:banner="@mipmap/ic_banner"
         android:label="@string/app_name"
