after the user logs in, start a service to query their account status and write it to the account.
This makes it so they don't simply see 'trial' when they visit their account page

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -292,6 +292,7 @@
         <service android:name=".service.ApiDownloadService" />
         <service android:name=".service.SubscriptionExpirationCheckService" />
         <service android:name=".service.SignoutService" />
+        <service android:name=".service.SimpleSubscriptionCheckService" />
 
         <service
             android:name=".service.ComposeTileService"
