--- a/app/build.gradle
+++ b/app/build.gradle
@@ -125,6 +125,7 @@ dependencies {
     compile 'com.klinkerapps:link_builder:1.3.2'
     compile 'com.klinkerapps:android-chips:1.1.0@aar'
     compile 'com.klinkerapps:android-transcoder:1.0.1'
+    compile 'com.klinkerapps:article_viewer:0.5.0-SNAPSHOT'
 
     compile 'com.github.paolorotolo:appintro:4.0.0'
     compile 'com.yalantis:ucrop:2.2.0'
