--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,6 +16,8 @@
 
 apply plugin: 'com.android.application'
 apply plugin: 'com.getkeepsafe.dexcount'
+apply plugin: 'me.tatarka.retrolambda'
+
 
 def propsFile = rootProject.file('keystore.properties')
 def props = new Properties()
@@ -103,6 +105,11 @@ android {
         textOutput 'stdout'
         xmlReport false
         htmlReport true
+    }
+
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
     }
 }
 
