--- a/build.gradle
+++ b/build.gradle
@@ -17,11 +17,13 @@
 buildscript {
     repositories {
         jcenter()
+        mavenCentral()
     }
     dependencies {
         classpath "com.android.tools.build:gradle:$ANDROID_GRADLE_VERSION"
         classpath 'com.getkeepsafe.dexcount:dexcount-gradle-plugin:0.4.3'
         classpath 'com.google.gms:google-services:3.0.0'
+        classpath 'me.tatarka:gradle-retrolambda:3.3.1'
     }
 }
 
