apply the api key for the article server

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,6 +57,7 @@ android {
         }
 
         buildConfigField("String", "GIPHY_API_KEY", "\"${apiKeys['GIPHY']}\"")
+        buildConfigField("String", "ARTICLE_API_KEY", "\"${apiKeys['ARTICLE']}\"")
     }
 
     signingConfigs {
