--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -294,6 +294,7 @@
         <service android:name=".service.SubscriptionExpirationCheckService" />
         <service android:name=".service.SignoutService" />
         <service android:name=".service.SimpleSubscriptionCheckService" />
+        <service android:name=".service.SimpleLifetimeSubscriptionCheckService" />
 
         <service
             android:name=".service.ComposeTileService"
