--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -58,7 +58,7 @@
         android:name=".MessengerApplication"
         android:allowBackup="false"
         android:icon="@mipmap/ic_launcher"
-        android:banner="@mipmap/ic_banner"
+        android:banner="@drawable/ic_banner"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:largeHeap="true"
