--- a/app/build.gradle
+++ b/app/build.gradle
@@ -147,6 +147,7 @@ dependencies {
     compile 'com.github.chrisbanes:PhotoView:1.3.1'
     compile 'me.leolin:ShortcutBadger:1.1.10@aar'
     compile 'com.bignerdranch.android:recyclerview-multiselect:0.2'
+    compile 'com.google.android.apps.dashclock:dashclock-api:+'
 
     compile project(":api_implementation")
     compile project(":encryption")
