implement repeated notifications

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -292,6 +292,7 @@
         <service android:name=".service.ForceTokenRefreshService" />
         <service android:name=".service.FirebaseHandlerService" />
         <service android:name=".service.NotificationService" />
+        <service android:name=".service.RepeatNotificationService" />
         <service android:name=".service.NotificationDismissedService" />
         <service android:name=".service.NotificationMarkReadService" />
         <service android:name=".service.NotificationCallService" />
