--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -278,7 +278,7 @@
             </intent-filter>
         </service>
 
-        <!-- <service android:name=".service.DashclockExtension"
+        <service android:name=".service.DashclockExtension"
             android:icon="@drawable/ic_stat_notify_group"
             android:label="@string/app_name"
             android:permission="com.google.android.apps.dashclock.permission.READ_EXTENSION_DATA">
@@ -287,7 +287,7 @@
             </intent-filter>
             <meta-data android:name="protocolVersion" android:value="2" />
             <meta-data android:name="worldReadable" android:value="true" />
-        </service> -->
+        </service>
 
         <service android:name=".service.ForceTokenRefreshService" />
         <service android:name=".service.FirebaseHandlerService" />
