support for richer youtube videos

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -307,6 +307,7 @@
         <service android:name=".service.SignoutService" />
         <service android:name=".service.SimpleSubscriptionCheckService" />
         <service android:name=".service.SimpleLifetimeSubscriptionCheckService" />
+        <service android:name=".service.MediaParserService" />
 
         <service
             android:name=".service.ComposeTileService"
