--- a/app/build.gradle
+++ b/app/build.gradle
@@ -91,9 +91,9 @@ android {
             signingConfig signingConfigs.release
         }
         release {
-            minifyEnabled true
-            shrinkResources true
-            proguardFiles 'proguard-android-optimize.txt', 'proguard-rules.pro'
+            minifyEnabled false
+            shrinkResources false
+            //proguardFiles 'proguard-android-optimize.txt', 'proguard-rules.pro'
             signingConfig signingConfigs.release
         }
     }
