--- a/app/build.gradle
+++ b/app/build.gradle
@@ -130,7 +130,7 @@ dependencies {
     compile "com.google.android.gms:play-services-maps:${GOOGLE_PLAY_SERVICES_VERSION}"
 
     compile 'com.klinkerapps:android-smsmms:3.4.3'
-    compile 'com.klinkerapps:link_builder:1.3.2'
+    compile 'com.klinkerapps:link_builder:1.5.2-SNAPSHOT'
     compile 'com.klinkerapps:android-chips:1.1.0@aar'
     compile 'com.klinkerapps:android-transcoder:1.0.1'
     compile 'com.klinkerapps:article_viewer:0.10.2'
