--- a/app/build.gradle
+++ b/app/build.gradle
@@ -130,10 +130,10 @@ dependencies {
     compile "com.google.android.gms:play-services-maps:${GOOGLE_PLAY_SERVICES_VERSION}"
 
     compile 'com.klinkerapps:android-smsmms:3.4.3'
-    compile 'com.klinkerapps:link_builder:1.5.2-SNAPSHOT'
+    compile 'com.klinkerapps:link_builder:1.5.2'
     compile 'com.klinkerapps:android-chips:1.1.0@aar'
     compile 'com.klinkerapps:android-transcoder:1.0.1'
-    compile 'com.klinkerapps:article_viewer:0.10.2'
+    compile 'com.klinkerapps:article_viewer:0.10.2@aar'
     compile 'com.klinkerapps:giphy:1.0.0'
 
     compile 'com.github.paolorotolo:appintro:4.0.0'
