--- a/api_implementation/build.gradle
+++ b/api_implementation/build.gradle
@@ -17,6 +17,10 @@
 apply plugin: 'com.android.library'
 
 android {
+    dexOptions {
+        jumboMode = true
+    }
+
     try {
         compileSdkVersion Integer.parseInt(COMPILE_SDK)
     } catch (Exception e) {
