use new support libs exif interface

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -129,6 +129,7 @@ dependencies {
     compile "com.android.support:percent:${ANDROID_SUPPORT_VERSION}"
     compile "com.android.support:leanback-v17:${ANDROID_SUPPORT_VERSION}"
     compile "com.android.support:customtabs:${ANDROID_SUPPORT_VERSION}"
+    compile "com.android.support:exifinterface:${ANDROID_SUPPORT_VERSION}"
 
     compile "com.google.firebase:firebase-crash:${FIREBASE_VERSION}"
     compile "com.google.android.gms:play-services-maps:${GOOGLE_PLAY_SERVICES_VERSION}"
