--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -312,6 +312,7 @@
         <service android:name=".service.SimpleLifetimeSubscriptionCheckService" />
         <service android:name=".service.MediaParserService" />
         <service android:name=".service.NewMessagesCheckService" />
+        <service android:name=".service.FirebaseResetService" />
 
         <service
             android:name=".service.ComposeTileService"
