check for updates on the FCM token every few hours

--- a/api_implementation/src/main/AndroidManifest.xml
+++ b/api_implementation/src/main/AndroidManifest.xml
@@ -44,6 +44,8 @@
                 <action android:name="com.google.firebase.INSTANCE_ID_EVENT" />
             </intent-filter>
         </service>
+
+        <service android:name=".firebase.ScheduledTokenRefreshService" />
     </application>
 
 </manifest>
