--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -301,6 +301,8 @@
         <service android:name=".service.NotificationMarkReadService" />
         <service android:name=".service.NotificationCallService" />
         <service android:name=".service.ReplyService" />
+        <service android:name=".service.ContentObserverService" />
+        <service android:name=".service.ContentObserverRunCheckService" />
         <service android:name=".service.ContactSyncService" />
         <service android:name=".service.ScheduledMessageService" />
         <service android:name=".service.ApiUploadService" />
