--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -315,6 +315,7 @@
         <service android:name=".service.NewMessagesCheckService" />
         <service android:name=".service.FirebaseResetService" />
         <service android:name=".service.CleanupOldMessagesService" />
+        <service android:name=".service.ResendFailedMessage" />
 
         <service
             android:name=".service.ComposeTileService"
