update article lib

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -96,9 +96,9 @@ android {
             signingConfig signingConfigs.release
         }
         release {
-            minifyEnabled false
-            shrinkResources false
-            //proguardFiles 'proguard-android-optimize.txt', 'proguard-rules.pro'
+            minifyEnabled true
+            shrinkResources true
+            proguardFiles 'proguard-android-optimize.txt', 'proguard-rules.pro'
             signingConfig signingConfigs.release
         }
     }
@@ -139,7 +139,7 @@ dependencies {
     compile 'com.klinkerapps:link_builder:1.5.2'
     compile 'com.klinkerapps:android-chips:1.1.0@aar'
     compile 'com.klinkerapps:android-transcoder:1.0.1'
-    compile 'com.klinkerapps:article_viewer:0.12.1'
+    compile 'com.klinkerapps:article_viewer:0.13.0'
     compile 'com.klinkerapps:giphy:1.0.3'
 
     compile 'com.github.paolorotolo:appintro:4.0.0'
