--- a/gradle.properties
+++ b/gradle.properties
@@ -24,6 +24,7 @@ USE_JACK=false
 ANDROID_GRADLE_VERSION=2.2.3
 BUILD_TOOLS_VERSION=25.0.2
 ANDROID_SUPPORT_VERSION=25.1.0
+WEARABLE_SUPPORT_VERSION=2.0.0-beta2
 
 FIREBASE_VERSION=10.0.1
 GOOGLE_PLAY_SERVICES_VERSION=10.0.1
