--- a/wear/src/main/AndroidManifest.xml
+++ b/wear/src/main/AndroidManifest.xml
@@ -4,9 +4,15 @@
 
     <uses-feature android:name="android.hardware.type.watch" />
 
-    <application android:allowBackup="true" android:icon="@mipmap/ic_launcher"
+    <application android:name=".MessengerApplication"
+        android:allowBackup="true" android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name" android:supportsRtl="true"
         android:theme="@android:style/Theme.DeviceDefault">
+
+        <meta-data
+            android:name="com.google.android.wearable.standalone"
+            android:value="true" />
+
         <activity android:name=".MessengerActivity" android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -14,6 +20,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity android:name=".ActivateActivity" android:label="@string/app_name" />
+
     </application>
 
 </manifest>
