--- a/wear/src/main/AndroidManifest.xml
+++ b/wear/src/main/AndroidManifest.xml
@@ -13,7 +13,11 @@
             android:name="com.google.android.wearable.standalone"
             android:value="true" />
 
-        <activity android:name=".MessengerActivity" android:label="@string/app_name">
+        <meta-data
+            android:name="com.google.android.wearable.notificationBridgeMode"
+            android:value="NO_BRIDGING" />
+
+        <activity android:name=".activity.MessengerWearActivity" android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -21,7 +25,8 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".ActivateActivity" android:label="@string/app_name" />
+        <activity android:name=".activity.ActivateWearActivity" android:label="@string/app_name" />
+        <activity android:name=".activity.InitialLoadWearActivity" android:label="@string/app_name" />
 
     </application>
 
