re-add dependency

--- a/shared/build.gradle
+++ b/shared/build.gradle
@@ -109,6 +109,7 @@ dependencies {
     compile 'com.klinkerapps:article_viewer:0.13.0'
     compile 'com.klinkerapps:giphy:1.0.3'
 
+    compile 'com.github.paolorotolo:appintro:4.0.0'
     compile 'com.yalantis:ucrop:2.2.0'
     compile 'de.hdodenhof:circleimageview:2.1.0'
     compile 'com.afollestad:sectioned-recyclerview:0.2.3'
