--- a/app/build.gradle
+++ b/app/build.gradle
@@ -122,6 +122,15 @@ android {
 
 dependencies {
     compile project(":shared")
+    
+    testCompile 'junit:junit:4.12'
+    testCompile "org.robolectric:robolectric:3.1.1"
+    testCompile 'org.mockito:mockito-all:1.9.5'
+    testCompile 'org.powermock:powermock-mockito-release-full:1.6.1'
+    testCompile 'org.powermock:powermock-module-junit4-rule:1.6.0'
+    testCompile 'org.powermock:powermock-api-mockito:1.6.0'
+    testCompile 'org.powermock:powermock-classloading-xstream:1.6.0'
+    testCompile 'org.apache.maven:maven-ant-tasks:2.1.3'
 }
 
 apply plugin: 'com.google.gms.google-services'
