--- a/wear/src/main/AndroidManifest.xml
+++ b/wear/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
             android:name="com.google.android.wearable.notificationBridgeMode"
             android:value="NO_BRIDGING" />
 
-        <activity android:name=".activity.MessengerWearActivity" android:label="@string/app_name">
+        <activity android:name=".activity.MessengerActivity" android:theme="@style/AppThemeWearable" android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -26,7 +26,8 @@
         </activity>
 
         <activity android:name=".activity.ActivateWearActivity" android:label="@string/app_name" />
-        <activity android:name=".activity.InitialLoadWearActivity" android:label="@string/app_name" />
+        <activity android:name=".activity.InitialLoadWearActivity" android:theme="@style/AppTheme" android:label="@string/app_name" />
+        <activity android:name=".activity.MessageListActivity"  android:theme="@style/AppThemeWearable" android:label="@string/app_name" />
 
     </application>
 
