--- a/wear/build.gradle
+++ b/wear/build.gradle
@@ -100,6 +100,8 @@ android {
 dependencies {
     compile project(":shared")
 
+    compile 'com.klinkerapps:wearable-reply:1.0.0-SNAPSHOT'
+
     compile "com.google.android.support:wearable:${WEARABLE_SUPPORT_VERSION}"
     compile "com.google.android.gms:play-services-wearable:${GOOGLE_PLAY_SERVICES_VERSION}"
 }
