refactor the API utils and add retry logic

--- a/api_implementation/build.gradle
+++ b/api_implementation/build.gradle
@@ -15,6 +15,7 @@
  */
 
 apply plugin: 'com.android.library'
+apply plugin: 'me.tatarka.retrolambda'
 
 android {
     dexOptions {
@@ -59,6 +60,11 @@ android {
         textOutput 'stdout'
         xmlReport false
         htmlReport true
+    }
+
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
     }
 }
 
