--- a/wear/build.gradle
+++ b/wear/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'me.tatarka.retrolambda'
 
 def propsFile = rootProject.file('keystore.properties')
 def props = new Properties()
@@ -94,6 +95,11 @@ android {
         textOutput 'stdout'
         xmlReport false
         htmlReport true
+    }
+
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
     }
 }
 
