--- a/wear/src/main/AndroidManifest.xml
+++ b/wear/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="xyz.klinker.messenger">
 
     <uses-feature android:name="android.hardware.type.watch" />
+    <uses-library android:name="com.google.android.wearable" android:required="false" />
 
     <application android:name=".MessengerApplication"
         android:allowBackup="true" android:icon="@mipmap/ic_launcher"
