Add meta-data to support large screens

--- a/shared/src/main/AndroidManifest.xml
+++ b/shared/src/main/AndroidManifest.xml
@@ -65,6 +65,10 @@
                 android:name="android.support.FILE_PROVIDER_PATHS"
                 android:resource="@xml/provider_paths"/>
         </provider>
+      
+        <meta-data 
+            android:name="android.max_aspect" 
+            android:value="2.1" />
 
         <meta-data
             android:name="com.google.android.gms.car.application"
