--- a/shared/src/main/AndroidManifest.xml
+++ b/shared/src/main/AndroidManifest.xml
@@ -180,29 +180,31 @@
             <meta-data android:name="worldReadable" android:value="true" />
         </service>
 
+
+        <service android:name=".service.jobs.CleanupOldMessagesJob" android:permission="android.permission.BIND_JOB_SERVICE" />
+        <service android:name=".service.jobs.RepeatNotificationJob" android:permission="android.permission.BIND_JOB_SERVICE" />
+        <service android:name=".service.jobs.ContentObserverRunCheckJob" android:permission="android.permission.BIND_JOB_SERVICE" />
+        <service android:name=".service.jobs.ContactSyncJob" android:permission="android.permission.BIND_JOB_SERVICE" />
+        <service android:name=".service.jobs.ScheduledMessageJob" android:permission="android.permission.BIND_JOB_SERVICE" />
+        <service android:name=".service.jobs.SubscriptionExpirationCheckJob" android:permission="android.permission.BIND_JOB_SERVICE" />
+        <service android:name=".service.jobs.SignoutJob" android:permission="android.permission.BIND_JOB_SERVICE" />
+
         <service android:name=".service.ForceTokenRefreshService" />
         <service android:name=".service.FirebaseHandlerService" />
         <service android:name=".service.NotificationService" />
-        <service android:name=".service.jobs.RepeatNotificationJob" />
         <service android:name=".service.NotificationDismissedService" />
         <service android:name=".service.NotificationMarkReadService" />
         <service android:name=".service.NotificationDeleteService" />
         <service android:name=".service.NotificationCallService" />
         <service android:name=".service.ReplyService" />
         <service android:name=".service.ContentObserverService" />
-        <service android:name=".service.jobs.ContentObserverRunCheckJob" />
-        <service android:name=".service.jobs.ContactSyncJob" />
-        <service android:name=".service.jobs.ScheduledMessageJob" />
         <service android:name=".service.ApiUploadService" />
         <service android:name=".service.ApiDownloadService" />
-        <service android:name=".service.jobs.SubscriptionExpirationCheckJob" />
-        <service android:name=".service.jobs.SignoutJob" />
         <service android:name=".service.SimpleSubscriptionCheckService" />
         <service android:name=".service.SimpleLifetimeSubscriptionCheckService" />
         <service android:name=".service.MediaParserService" />
         <service android:name=".service.NewMessagesCheckService" />
         <service android:name=".service.FirebaseResetService" />
-        <service android:name=".service.jobs.CleanupOldMessagesJob" />
         <service android:name=".service.ResendFailedMessage" />
 
         <service
