rework the 'refresh push notifications' option.
It will not just delete and recreate the account for the user. They will have to enter their email/password again

--- a/api_implementation/src/main/AndroidManifest.xml
+++ b/api_implementation/src/main/AndroidManifest.xml
@@ -25,6 +25,12 @@
             android:launchMode="singleTask"/>
 
         <activity
+            android:name=".RecreateAccountActivity"
+            android:theme="@style/api_Theme.AppCompat.Translucent"
+            android:configChanges="keyboardHidden|keyboard|screenLayout|orientation|screenSize"
+            android:launchMode="singleTask"/>
+
+        <activity
             android:name=".ActivateActivity"
             android:theme="@style/api_Theme.AppCompat.Activate"
             android:configChanges="keyboardHidden|keyboard|screenLayout|orientation|screenSize"
