--- a/shared/build.gradle
+++ b/shared/build.gradle
@@ -104,7 +104,7 @@ dependencies {
     compile "com.google.firebase:firebase-crash:${FIREBASE_VERSION}"
     compile "com.google.android.gms:play-services-maps:${GOOGLE_PLAY_SERVICES_VERSION}"
 
-    compile 'com.klinkerapps:android-smsmms:4.0.0-SNAPSHOT'
+    compile 'com.klinkerapps:android-smsmms:4.0.1'
     compile 'com.klinkerapps:link_builder:1.5.2'
     compile 'com.klinkerapps:android-chips:1.1.0@aar'
     compile 'com.klinkerapps:android-transcoder:1.0.1'
@@ -122,7 +122,7 @@ dependencies {
     compile 'com.github.chrisbanes:PhotoView:1.3.1'
     compile 'me.leolin:ShortcutBadger:1.1.14@aar'
     compile 'com.bignerdranch.android:recyclerview-multiselect:0.2'
-    compile 'com.google.android.apps.dashclock:dashclock-api:+'
+    compile 'com.google.android.apps.dashclock:dashclock-api:2.0.0'
     compile 'com.github.codekidX:storage-chooser:1.0.30'
 
     compile project(":api_implementation")
