--- a/build.gradle
+++ b/build.gradle
@@ -41,3 +41,11 @@ allprojects {
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
+
+ext.parseSdkVersion = { sdk ->
+    try {
+        return Integer.parseInt(sdk)
+    } catch (NumberFormatException e) {
+        return sdk
+    }
+}
