--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,33 +33,19 @@ android {
         jumboMode = true
     }
 
-    try {
-        compileSdkVersion Integer.parseInt(COMPILE_SDK)
-    } catch (Exception e) {
-        compileSdkVersion COMPILE_SDK
-    }
-
+    compileSdkVersion parseSdkVersion(COMPILE_SDK)
     buildToolsVersion BUILD_TOOLS_VERSION
 
     defaultConfig {
         multiDexEnabled true
 
         applicationId "xyz.klinker.messenger"
-        minSdkVersion Integer.parseInt(project.MIN_SDK)
-
-        try {
-            targetSdkVersion Integer.parseInt(TARGET_SDK)
-        } catch (Exception e) {
-            targetSdkVersion TARGET_SDK
-        }
+        minSdkVersion parseSdkVersion(project.MIN_SDK)
+        targetSdkVersion parseSdkVersion(TARGET_SDK)
 
         versionName(VERSION_NAME + '.' + buildNumber)
         versionCode buildNumber
         project.archivesBaseName = "messenger-${versionName}"
-
-        jackOptions {
-            enabled Boolean.parseBoolean(USE_JACK)
-        }
 
         buildConfigField("String", "GIPHY_API_KEY", "\"${apiKeys['GIPHY']}\"")
         buildConfigField("String", "ARTICLE_API_KEY", "\"${apiKeys['ARTICLE']}\"")
