--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -59,7 +59,7 @@
         tools:replace="android:allowBackup"
         android:name=".MessengerApplication"
         android:allowBackup="false"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/launcher_icon"
         android:banner="@drawable/ic_banner"
         android:label="@string/app_name"
         android:supportsRtl="true"
