update to build against o

--- a/gradle.properties
+++ b/gradle.properties
@@ -17,13 +17,13 @@ VERSION_NAME=2.2.4
 VERSION_CODE=59
 
 MIN_SDK=21
-TARGET_SDK=25
-COMPILE_SDK=25
+TARGET_SDK=O
+COMPILE_SDK=android-O
 USE_JACK=false
 
-ANDROID_GRADLE_VERSION=2.3.1
-BUILD_TOOLS_VERSION=25.0.2
-ANDROID_SUPPORT_VERSION=25.3.1
+ANDROID_GRADLE_VERSION=2.4.0-alpha4
+BUILD_TOOLS_VERSION=26.0.0-rc1
+ANDROID_SUPPORT_VERSION=26.0.0-alpha1
 WEARABLE_SUPPORT_VERSION=2.0.0
 
 FIREBASE_VERSION=10.2.0
