add android auto only to the app

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -66,6 +66,10 @@
         android:largeHeap="true"
         android:hardwareAccelerated="true"
         android:theme="@style/PulseTheme">
+      
+        <meta-data
+            android:name="com.google.android.gms.car.application"
+            android:resource="@xml/automotive_app_desc" />
 
         <activity
             android:name=".activity.MessengerActivity"
